# cosmonaut

./: .gitignore  README.md  compose.yml  init-letsencrypt.sh  package-lock.json  react-build.sh
cosmonaut-api/: .env.dev  .gitignore  Dockerfile  Makefile  README.md  compose.rust.Dockerfile  compose.sql  compose.yml  jest.config.js  package-lock.json  package.json  pm2-env.json  rust.Dockerfile  tsconfig.json  tsconfig.prod.json
cosmonaut-api/cargo-projects/cosm-base/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/answers/lesson1/chapter6/: execute_result.json  query_result.json
cosmonaut-api/cargo-projects/cosm-base/answers/lesson2/chapter8/: execute_result.json  query_result.json
cosmonaut-api/cargo-projects/cosm-base/answers/lesson3/chapter8/: query_result.json
cosmonaut-api/cargo-projects/cosm-base/answers/lesson4/chapter2/: execute_result.json
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson1/chapter6/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson1/chapter6/cw721-spaceship/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson1/chapter6/cw721-spaceship/src/: init.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson1/chapter6/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson2/chapter8/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson2/chapter8/cw20-tokens/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson2/chapter8/cw20-tokens/src/: init.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson2/chapter8/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/cw20-tokens/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/cw20-tokens/src/: query.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/cw721-spaceship/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/cw721-spaceship/src/: execute.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/main-contract/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter3/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter8/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter8/cw721-spaceship/src/: query.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter8/main-contract/src/: execute.rs  instantiate.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson3/chapter8/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/cw20-tokens/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/cw20-tokens/src/: execute.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/cw721-spaceship/src/: instantiate.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/main-contract/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/main-contract/src/: lib.rs  query.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter2/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/cw20-tokens/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/cw20-tokens/src/: instantiate.rs  lib.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/cw721-spaceship/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/main-contract/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/main-contract/src/: init.rs
cosmonaut-api/cargo-projects/cosm-base/lessons/lesson4/chapter3/src/: main.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson1/chapter6/: answer.md
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson1/chapter6/contracts/cosmonaut-cw721/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson1/chapter6/contracts/cosmonaut-cw721/src/: contract.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson2/chapter8/: answer.md
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson2/chapter8/contracts/cosmonaut-cw20/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson2/chapter8/contracts/cosmonaut-cw20/src/: contract.rs  execute.rs  query.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson3/chapter3/: answer.md
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson3/chapter3/contracts/cosmonaut-main/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson3/chapter3/contracts/cosmonaut-main/src/: contract.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson3/chapter8/contracts/cosmonaut-main/src/: error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson4/chapter2/: answer.md
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson4/chapter2/contracts/cosmonaut-main/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson4/chapter2/contracts/cosmonaut-main/src/: query.rs
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson4/chapter3/contracts/cosmonaut-main/: Cargo.toml
cosmonaut-api/cargo-projects/cosm-base/skeleton/lesson4/chapter3/contracts/cosmonaut-main/src/: contract.rs  execute.rs
cosmonaut-api/cargo-projects/scripts/: init.sh
cosmonaut-api/src/: app.ts  cargo.ts  index.ts
cosmonaut-api/src/boot/: db.ts  dbquery.ts  index.ts
cosmonaut-api/src/config/: auth.ts  index.ts  logger.ts
cosmonaut-api/src/controllers/: cosm.ts  index.ts  rust.ts
cosmonaut-api/src/db/: index.ts  pg.ts  redis.ts
cosmonaut-api/tests/: route.rust.test.ts  rust.test.ts  services.test.ts  utils.test.ts
cosmonaut-api/testweb/: app.js  login.js
cosmonaut-frontend/: package-lock.json  package.json  tailwind.config.js
cosmonaut-frontend/public/: index.html
cosmonaut-frontend/src/: App.jsx  index.jsx
data/nginx/: app.conf
templates/: default.conf.template
(+190 files in other folders)
