[package]
name = "lesson3"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]

[dependencies]
cw20-tokens = {path= "./cw20-tokens" }
cw721-spaceship = {path= "./cw721-spaceship" }
main-contract = {path= "./main-contract" }
base = {path= "/workspace/cargo-projects/cosm-base/packages/base" }
cosmwasm-std = { version = "1.0.0" }
