[package]
name = "cw20-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cosmwasm-std = { version = "1.0.0" }
cw-multi-test = "0.13.2"
cw20 = "0.13.4"
base = {path="/workspace/cargo-projects/cosm-base/packages/base"}
cw20-base = { version = "0.13.2", features = ["library"] }
cosmonaut-cw20 = {path= "../contracts/cosmonaut-cw20", features=["library"]}
