[package]
name = "cw721-spaceship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0" }
serde_json = "1.0.81"
cw-multi-test = "0.13.2"
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
anyhow = "1.0.57"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
schemars = "0.8.10"
base = {path= "/workspace/cargo-projects/cosm-base/packages/base" }
cosmonaut-cw721 = {path= "/workspace/cargo-projects/cosm-base/packages/cosmonaut-cw721", features=["library"]}
