[package]
name = "main-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw-multi-test = "0.13.2"

cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
base = {path= "/workspace/cargo-projects/cosm-base/packages/base" }
cosmonaut-cw20 = {path= "/workspace/cargo-projects/cosm-base/packages/cosmonaut-cw20", features=["library"]}
cosmonaut-cw721 = {path= "/workspace/cargo-projects/cosm-base/packages/cosmonaut-cw721", features=["library"]}
cosmonaut-main = {path="../contracts/cosmonaut-main", features=["library"]}
