[package]
name = "main-contract_43"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.10"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
cw-multi-test = "0.13.2"

cw20 = "0.13.2"
cw20-base = { version = "0.13.2", features = ["library"] }
cw721 = "0.13.2"
cw721-base = { version = "0.13.2", features = ["library"] }
base = {path= "../../../../packages/base" }
cosmonaut-cw20 = {path= "../../../../packages/cosmonaut-cw20", features=["library"], package = "p_cosmonaut-cw20"}
cosmonaut-cw721 = {path= "../../../../packages/cosmonaut-cw721", features=["library"], package = "p_cosmonaut-cw721"}
cosmonaut-main = {path="../../../../skeleton/lesson4/chapter3/contracts/cosmonaut-main", features=["library"], package = "cosmonaut-main_43"}
